# gawp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/: example.ipynb
src/gawp/: __init__.py  gawp.py  html.py  html_template.py  template.html  types_and_default_values.py
src/glance/: __init__.py  glance.py  html.py  server.py  template.html
